# electron-cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md  index.html  package.json  rollup.config.js
src/cpp/: main.cpp
src/js/: main.js  preload.js
